		Attendance: added a warning to Attendance by Class when not currently timetabled for the selected date
		Behaviour: fixed typo in three settings
		Behaviour: fixed broken link to Edit in Step 2 of adding a behaviour record in Manage Behaviour
		Departments: fixed bug preventing students from seeing other students in a class
		Finance: set name of outgoing email to school name, not user's name
		Finance: fixed missing email address issue in Company invoices and receipts
		Individual Needs: added ability to record educational assistants for a student
		Library: added Optical Media as item type
		Library: added replacement fields to import
		Markbook: fixed multibyte character error in comment summary
		Messenger: fixed multibyte substring issue in homepage widget
		Messenger: added username to Individual select, to distinguish people with the same name
		Planner: updated attendance to only hide the reason and comment fields if Present is the default attendance
		Planner: added optional Markbook section (off by default) to weekly planner summary email
		Roll Groups: fixed bug preventing alerts from showing
		Rubrics: reduced wait time on rubric load for schools with lots of rubric data
		School Admin: updated Manage School Years to prevent removing or unsetting the current School Year
        School Admin: added an Assign Houses tool to bulk assign students to houses by Year Group
		Staff: fixed entryURL for full version of View Staff
		Students: fixed School History section in Student Profile to exclude upcoming years
		Students: fixed Application Form for logged in users not selecting a family by default (if one exists)
		Students: fixed interface string issue in student details screen
		Students: fixed display of Other Fields heading for parents in Application Form
        Students: added a notification event for Application Form Accepted
        Students: added an option for logged-in users to link new Application Forms to an existing user or family